Fix web worker
There were two issues. First ine, at some point the build broke and produced one bundle instead of two: main and a worker. Second, wasn't working cause workers can't pass non-serializable entities around (Promise in this case), so fixed that too. Now all classification happens in a worker as expected.
Also fix layout shifting cause of image sizes

--- a/src/components/dogs-viewer.css
+++ b/src/components/dogs-viewer.css
@@ -18,4 +18,5 @@
 
 .dogs-viewer__image {
   max-width: 100%;
+  height: 360px;
 }
